# mirBSA

./: .gitignore  README.md
src/full_coverage_path_planner/: package.xml
src/full_coverage_path_planner/src/: full_coverage_path_planner.cpp  spiral_stc.cpp
src/full_coverage_path_planner/test/full_coverage_path_planner/: test_full_coverage_path_planner.launch  test_full_coverage_path_planner_plugin.launch
src/full_coverage_path_planner/test/full_coverage_path_planner/param/: controllers.yaml  recovery_behaviors.yaml
src/iris_lama_ros/launch/: loc2d.launch
src/iris_lama_ros/src/: slam2d_ros.cpp
src/mir100_description/: CMakeLists.txt  package.xml
src/mir100_description/launch/: upload_mir_urdf.launch
src/mir100_description/urdf/: mir.urdf.xacro
src/mir100_description/urdf/include/: mir_100_v1.urdf.xacro  mir_v1.urdf.xacro  sick_s300.urdf.xacro
src/mir100_driver/: CMakeLists.txt  package.xml  setup.py
src/mir100_driver/launch/: mir.launch
src/mir100_driver/nodes/: mir_bridge.py
src/mir100_dwb_critics/: CMakeLists.txt  package.xml
src/mir100_gazebo/: CMakeLists.txt  package.xml
src/mir100_gazebo/launch/: mirGazebo.launch  mir_empty_world.launch  mir_gazebo_common.launch  mir_maze_world.launch  upload_mir_urdf.launch
src/mir100_gazebo/maps/: newmap.pgm  newmap.yaml
src/mir100_gazebo/mir_urdf/: mir.urdf.xacro
src/mir100_gazebo/mir_urdf/include/: common.gazebo.xacro  common_properties.urdf.xacro  mir.gazebo.xacro  mir_v1.urdf.xacro  sick_s300.urdf.xacro
src/mir100_gazebo/sdf/maze/: model.sdf
src/mir100_germgrid/: CMakeLists.txt  package.xml
src/mir100_germgrid/config/: sensorUV.yaml
src/mir100_germgrid/include/: germgrid.h
src/mir100_germgrid/launch/: irradiation.launch  mir_sim.launch
src/mir100_germgrid/src/: germgrid.cpp
src/mir100_localization/: CMakeLists.txt  package.xml
src/mir100_localization/launch/: scan_matching.launch
src/mir100_navigation/: CMakeLists.txt  package.xml
src/mir100_navigation/config/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  sbpl_global_params.yaml
src/mir100_navigation/launch/: disifection.launch  move_base.xml  move_base_flex.launch  scan_matching.launch  start_maps.launch  start_planner.launch  tracking_pid.launch
src/mir100_navigation/rviz/: navigation.rviz  rvizDisplayConfig.rviz
src/tracking_pid/test/tracking_pid/: test_tracking_pid.test  test_tracking_pid_cpp.launch
