<?xml version="1.0"?>
<package format="2">
  <name>mir100_navigation</name>
  <version>1.0.0</version>
  <description>Launch and configuration files for move_base, localization etc. on the MiR robot.</description>

  <maintainer email="hugoacbarros@ua.pt">Hugo Barros</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>mir100_gazebo</exec_depend>
  <exec_depend>mir100_localization</exec_depend>

</package>